--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.11.0
+======
+- Remove STREAM_EXPRESSION option for 'get' command and replcae it with a mandatory STREAM_PREFIX argument
+
 0.10.0
 =======
 - Gracefully exit on SIGPIPE (Thanks rwolfson) #122 #93 #101
